fixed card spacing issue

--- a/apps/workspace-view-app/src/components/boards/board-card/board-card-component.module.scss
+++ b/apps/workspace-view-app/src/components/boards/board-card/board-card-component.module.scss
@@ -4,7 +4,7 @@
   padding: 10px;
   border: 1px solid #ccc;
   width: 300px;
-  height: max-content;
+  height: 250px;
   margin: 10px;
   background-color: var(--secondary-background-color);
 
